# opaque

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  deny.toml  install.sh  mkdocs.yml  plan-fancy-roaming-mccarthy.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  dependency-review.yml  fuzz.yml  pages.yml  release.yml  scorecard.yml  security-audit.yml  site.yml
assets/demos/: quickstart.cast  sandbox-exec.cast  security-audit-detail-leak.cast  security-onepassword-read-field.cast  security-sandbox-secret-leak.cast
assets/linux/: opaqued.service
assets/linux/polkit/: com.agentpass.approve.policy  com.opaque.approve.policy
assets/macos/: com.opaque.daemon.plist
crates/agentpass/: Cargo.toml
crates/agentpass-core/: Cargo.toml
crates/agentpass-core/src/: audit.rs  lib.rs  operation.rs  peer.rs  policy.rs  proto.rs  sanitize.rs  socket.rs  validate.rs
crates/agentpass/src/: main.rs
crates/agentpassd/: Cargo.toml
crates/agentpassd/src/: approval.rs  enclave.rs  main.rs
crates/opaque/: Cargo.toml  build.rs
crates/opaque-approve-helper/: Cargo.toml
crates/opaque-approve-helper/src/: main.rs
crates/opaque-core/: Cargo.toml
crates/opaque-core/src/: audit.rs  execve_map.rs  lib.rs  operation.rs  peer.rs  policy.rs  profile.rs  proto.rs  rate_limit.rs  sanitize.rs  seal.rs  socket.rs  validate.rs
crates/opaque-mcp/: Cargo.toml
crates/opaque-mcp/src/: daemon_client.rs  main.rs  tools.rs
crates/opaque-web/: Cargo.toml
crates/opaque-web/src/: config.rs  daemon_client.rs  demo.rs  main.rs  security.rs  sse.rs
crates/opaque-web/src/routes/: audit.rs  mod.rs  operations.rs  policy.rs  sessions.rs  status.rs
crates/opaque-web/static/: index.html
crates/opaque/src/: inject.rs  main.rs  service.rs  setup.rs  ui.rs  wizard.rs
crates/opaque/src/presets/: agent-wrapper-github.toml  codex-agent.toml  github-secrets.toml  gitlab-variables.toml  safe-demo.toml  sandbox-human.toml  starter.toml
crates/opaqued/: Cargo.toml
crates/opaqued/src/: approval.rs  approval_server.rs  audit_sse.rs  enclave.rs  fido2.rs  main.rs  push.rs  secret.rs
crates/opaqued/src/aws/: client.rs  mod.rs  resolve.rs
crates/opaqued/src/azure/: client.rs  mod.rs  resolve.rs
crates/opaqued/src/bitwarden/: client.rs  mod.rs  resolve.rs
crates/opaqued/src/doppler/: client.rs  mod.rs  resolve.rs
crates/opaqued/src/gcp/: client.rs  mod.rs  resolve.rs
crates/opaqued/src/github/: client.rs  crypto.rs  mod.rs
crates/opaqued/src/gitlab/: client.rs  mod.rs
crates/opaqued/src/infisical/: client.rs  mod.rs  resolve.rs
crates/opaqued/src/onepassword/: client.rs  mod.rs  op_cli.rs  resolve.rs
crates/opaqued/src/pairing/: challenge.rs  mod.rs  store.rs
crates/opaqued/src/sandbox/: execve_hook.rs  linux.rs  macos.rs  mod.rs  resolve.rs
crates/opaqued/src/vault/: client.rs  mod.rs  resolve.rs
crates/opaqued/tests/fixtures/: test_rsa_key.pem
docs/: README.md  adversarial-security-review-2026-02-14.md  alpha-competitive-battlecard.md  alpha-design-partner-usage-log-2026-02-25.md  alpha-go-no-go-status-2026-02-25.md  alpha-macos-signing-waiver-template.md  alpha-signoff-ledger-2026-02-25.md  architecture.md  audit-analytics.md  bitwarden.md  critique-prd-hardening.md  demos.md  deployment.md  design-partner-scorecard-template.md  enterprise-architecture.md  getting-started.md  index.md  launch-week-playbook.md  linux-polkit.md  llm-harness.md  mcp-integration.md  mobile-approvals.md  operations.md  policy.md  release-checklist.md  requirements.txt  roadmap-deferred.md  security-assessment.md  storage.md  vault.md  web-dashboard.md
docs/blog/: why-we-built-opaque.md
docs/overrides/: main.html
docs/site/: index.html
docs/stylesheets/: extra.css
examples/: policy.toml
examples/profiles/: dev.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_exec_profile.rs  fuzz_ipc_request.rs  fuzz_policy_toml.rs  fuzz_proto_frames.rs
homebrew/: opaque.rb
ios/Opaque/: Info.plist
ios/Opaque/Opaque.xcodeproj/: project.pbxproj
ios/Opaque/Sources/: OpaqueApp.swift
ios/Opaque/Sources/Crypto/: KeyManager.swift
ios/Opaque/Sources/Models/: ApprovalRequest.swift  PairedServer.swift
ios/Opaque/Sources/Network/: ApprovalClient.swift  BonjourDiscovery.swift
ios/Opaque/Sources/Views/: ApprovalView.swift  DeviceListView.swift  PairingView.swift
landing/: BRAND.md  _headers  index.html
scripts/: demo_quickstart.sh  demo_sandbox_exec.sh  demo_security_audit_detail_leak.sh  demo_security_onepassword_read_field.sh  demo_security_sandbox_secret_leak.sh  mock_1password_connect.py  record_demos.sh
