[workspace]
resolver = "2"
members = [
  "crates/opaque-core",
  "crates/opaqued",
  "crates/opaque",
  "crates/opaque-approve-helper",
]

[workspace.dependencies]
bytes = "1.10.1"
clap = { version = "4.5.30", features = ["derive"] }
futures-util = { version = "0.3.30", features = ["sink"] }
getrandom = "0.3"
glob-match = "0.2.1"
jsonschema = "0.28"
libc = "0.2.170"
regex = "1.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10"
thiserror = "2.0.11"
toml_edit = { version = "0.22", features = ["serde"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "signal", "sync", "time"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
