[workspace]
resolver = "2"
members = [
  "crates/opaque-core",
  "crates/opaqued",
  "crates/opaque",
  "crates/opaque-approve-helper",
  "crates/opaque-mcp",
  "crates/opaque-web",
]
exclude = ["fuzz"]

[workspace.package]
license = "BUSL-1.1"
repository = "https://github.com/kcirtapfromspace/opaque"
homepage = "https://github.com/kcirtapfromspace/opaque"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
bytes = "1.10.1"
clap = { version = "4.5.60", features = ["derive"] }
futures-util = { version = "0.3.30", features = ["sink"] }
getrandom = "0.3"
glob-match = "0.2.1"
jsonschema = "0.28"
libc = "0.2.182"
regex = "1.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10"
thiserror = "2.0.11"
toml_edit = { version = "0.25", features = ["serde"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "signal", "sync", "time", "process"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1.21", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
crypto_box = { version = "0.9", features = ["seal"] }
zeroize = { version = "1.8", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
wiremock = "0.6"
p256 = { version = "0.13", features = ["ecdsa"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rcgen = { version = "0.13", features = ["pem"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
mdns-sd = "0.12"
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "service", "server-auto"] }
