[package]
name = "opaque-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
opaque-core = { path = "../crates/opaque-core" }
serde_json = "1"
toml_edit = { version = "0.22", features = ["serde"] }

[[bin]]
name = "fuzz_policy_toml"
path = "fuzz_targets/fuzz_policy_toml.rs"
doc = false

[[bin]]
name = "fuzz_ipc_request"
path = "fuzz_targets/fuzz_ipc_request.rs"
doc = false

[[bin]]
name = "fuzz_exec_profile"
path = "fuzz_targets/fuzz_exec_profile.rs"
doc = false

[[bin]]
name = "fuzz_proto_frames"
path = "fuzz_targets/fuzz_proto_frames.rs"
doc = false
