[package]
name = "agentpassd"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
agentpass-core = { path = "../agentpass-core" }
bytes = { workspace = true }
libc = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
glob-match = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = { version = "0.6.3", default-features = false, features = ["std"] }
objc2-foundation = "0.3.2"
objc2-local-authentication = { version = "0.3.2", default-features = false, features = ["std", "block2", "LAContext"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.0.0", default-features = false, features = ["tokio"] }
zbus_polkit = { version = "5.0.0", default-features = false, features = ["tokio"] }
