[package]
name = "opaque-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
glob-match = { workspace = true }
jsonschema = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
