[package]
name = "opaque-web"
version = "0.1.0"
edition = "2024"
publish = false
description = "Web dashboard for Opaque — real-time monitoring and onboarding UI"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "opaque-web"
path = "src/main.rs"

[dependencies]
opaque-core = { path = "../opaque-core" }
axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
getrandom = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
