[package]
name = "opaque"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
opaque-core = { path = "../opaque-core" }
bytes = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
