[package]
name = "opaque"
version = "0.1.0"
edition = "2024"
publish = false
description = "CLI client for Opaque — approval-gated secrets broker for AI coding tools"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
opaque-core = { path = "../opaque-core" }
bytes = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml_edit = { workspace = true }
uuid = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = "3"
