[package]
name = "opaqued"
version = "0.1.0"
edition = "2024"
publish = false
description = "Opaque daemon — policy engine, approval orchestration, and provider execution"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
opaque-core = { path = "../opaque-core" }
bytes = { workspace = true }
libc = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
glob-match = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
crypto_box = { workspace = true }
jsonwebtoken = { workspace = true }
zeroize = { workspace = true }
p256 = { workspace = true }
hmac = "0.12"
chrono = { workspace = true }
ring = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
mdns-sd = { workspace = true }
hyper-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
tempfile = "3"
reqwest = { workspace = true, features = ["rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = { version = "0.6.3", default-features = false, features = ["std"] }
objc2-foundation = "0.3.2"
objc2-local-authentication = { version = "0.3.2", default-features = false, features = ["std", "block2", "LAContext"] }

# Linux approval is handled by the opaque-approve-helper binary (subprocess).
